Fix overflow not being hidden in Safari on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -331,6 +331,9 @@ p.li {
 ul {
   padding: 0;
 }
+.tab::-webkit-scrollbar {
+  display: none;
+}
 ::-webkit-scrollbar {
   width: 6px;
 }
